<resources>
    <string name="app_name">NewsClient</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">submit</string>
    <string name="user">Username:</string>
    <string name="email_address">Email address:</string>
    <string name="set_password">Set password:</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="account">Account:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="example_hello_world_kuleuven_be">example: hello.world@kuleuven.be</string>
    <string name="breaking_news">Breaking News</string>
    <string name="tags2">tags2</string>
    <string name="tags1">tags1</string>
    <string name="sports">Sports</string>
    <string name="economy">Economy</string>
    <string name="china">China</string>
    <string name="news">News</string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="review_here">Review Here</string>
    <string name="nr">Nr</string>
    <string name="comment">comment</string>
    <string name="content">Content</string>
    <string name="com3">Com3</string>
    <string name="com4">Com4</string>
    <string name="make_your_comment">Make your comment</string>
    <string name="submitBut">SUBMIT</string>
    <string name="title3">title3</string>
    <string name="title2">title2</string>
    <string name="title1">title1</string>
    <string name="title4">title4</string>
    <string name="title5">title5</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="administrator">Administrator</string>
    <string name="advertise_with_us">Advertise with us</string>
    <string name="likes">likes</string>
    <string name="calendar">calendar</string>
    <string name="first_part">First part</string>
    <string name="tags">Tags</string>
    <string name="category">Category</string>
    <string name="js">Js</string>
    <string name="path">Path:</string>
    <string name="caption">Caption</string>
    <string name="upload">Upload</string>
    <string name="demo">demo</string>
    <string name="must_start_with_upper_case_letter_contain_at_least_one_digit_be_8_16_characters">Must start with upper case letter, contain at least one digit, be 8~16 characters!</string>
    <string name="profilepic">profilePic</string>
    <string name="emailpic">emailPic</string>
    <string name="passwdpic">passwdPic</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="user_login">User Login</string>
    <string name="textview">Textview</string>
    <string name="textview2">textview2</string>
    <string name="thumbup">thumbUp</string>
    <string name="textview5">Textview5</string>
    <string name="textview1">Textview1</string>
    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="register">Register</string>
    <string name="guest">Guest</string>
    <string name="user_comments">User Comments</string>
    <string name="time">time</string>
    <string name="newsdate">newsDate</string>
    <string name="todo">TODO</string>
    <string name="likeicon">likeIcon</string>
    <string name="head">head</string>
    <string name="editor_login">Editor Login</string>
    <string name="editor_account">Editor account</string>
    <string name="login">Login</string>
    <string-array name="categorylist">
        <item>Economy</item>
        <item>Sports</item>
        <item>China</item>
    </string-array>

</resources>
