<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/logo_kul" android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/editor_login"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profilepic"
        app:srcCompat="@drawable/profile" />

    <EditText
        android:id="@+id/edAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editor_account"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="5dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/butEditorLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password" />

</LinearLayout>