<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:contentDescription="@string/image1"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_toEndOf="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:hint="@string/title"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/likesIcon"
        android:layout_width="16dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/likes"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/likes"
        android:layout_toStartOf="@+id/likes"
        android:contentDescription="@string/likeicon"
        app:layout_constraintEnd_toStartOf="@+id/likes"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:srcCompat="@drawable/like" />

    <TextView
        android:id="@+id/date"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image"
        android:layout_toEndOf="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:hint="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/likesIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/likes"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/likesIcon"
        app:layout_constraintTop_toTopOf="@+id/likesIcon"/>

</RelativeLayout>
