<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Ima_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/home" />

            <TextView
                android:id="@+id/CategoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/category"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:contentDescription="@string/profilepic"
                app:srcCompat="@drawable/profile"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    <ListView
        android:id="@+id/lvNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp" />


</RelativeLayout>